# tauri_test_app

./: Cargo.toml  navbar.html  package-lock.json  package.json  tauri.conf.json  test.html
src/: main.rs
