[package]
name = "tauri_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
